--- a/Shuriken/src/main/resources/static/index.html
+++ b/Shuriken/src/main/resources/static/index.html
@@ -5,6 +5,10 @@
 	content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <title>Spring Boot WebSocket Chat Application | CalliCoder</title>
 <link rel="stylesheet" href="/css/main.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
 </head>
 <body background="18.jpg"
 	style="background-position: center; background-repeat: no-repeat; background-size: cover;">
@@ -31,7 +35,7 @@
 	<div id="chat-page" class="hidden">
 		<div class="chat-container">
 			<div class="chat-header">
-				<h2>JavaTechie Global Chat Box</h2>
+				<h2>Shuriken Global Chat Box</h2>
 			</div>
 			<div class="connecting">Connecting...</div>
 			<ul id="messageArea">
@@ -49,10 +53,8 @@
 		</div>
 	</div>
 
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
+		
 	<script src="/js/main.js"></script>
 </body>
 </html>
